# binaryData

./: CMakeLists.txt  README.md  main.cpp
BootSector/: BootSector.cpp  BootSector.h
DiskImg/: DiskImg.cpp  DiskImg.h
Exceptions/: Exceptions.cpp  Exceptions.h
FileInfo/: FileInfo.cpp  FileInfo.h
